# ZhiXi

./: .gitignore  AGENT.md  CLAUDE.md  README.md
.claude/: settings.json
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: cases.py  dashboard.py  dictionaries.py  embeddings.py  evaluation.py  events.py  health.py  rag.py  reports.py  settings.py
backend/app/clients/: mock_client.py  model_clients.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: init_db.py  seed.py  session.py
backend/app/models/: case.py  dictionary.py  evaluation.py  report.py  retrieval.py
backend/app/prompts/: __init__.py  report_segments.py
backend/app/schemas/: __init__.py  case.py  common.py  dictionary.py  evaluation.py  event.py  rag.py  report.py
backend/app/services/: case_service.py  csv_import_service.py  dictionary_service.py  embedding_service.py  evaluation_service.py  evidence_pack_service.py  profile_service.py  report_generation_service.py  rerank_service.py  retrieval_service.py
backend/app/utils/: __init__.py  case_evidence.py  normalize.py  text_builders.py  vectors.py
backend/scripts/: import_csv.py  rebuild_embeddings.py  smoke_real_api.py
backend/tests/: conftest.py
backend/tests/integration/: test_cases_api.py  test_evaluation_api.py  test_rag_api.py  test_reports_api.py  test_settings_api.py
backend/tests/unit/: test_model_clients.py  test_profile_service.py  test_report_generation_service.py  test_scores.py
data/: Sheet1.csv
frontend/: .env.example  .gitignore  (+5 more)
(+74 files in other folders)
